fix(range): allow overflow on range bar container (#26751)

--- a/core/src/components/range/range.ios.scss
+++ b/core/src/components/range/range.ios.scss
@@ -40,14 +40,16 @@
 }
 
 .range-bar-active {
-  @include border-radius(0);
-  @include margin(null, calc(-1 * $range-ios-tick-width * 0.5), null, calc(-1 * $range-ios-tick-width * 0.5));
-
   bottom: 0;
 
   width: auto;
 
   background: var(--bar-background-active);
+
+  &.has-ticks {
+    @include border-radius(0);
+    @include margin(null, calc(-1 * $range-ios-tick-width * 0.5), null, calc(-1 * $range-ios-tick-width * 0.5));
+  }
 }
 
 .range-tick {
